# joyhousebot

./: .gitignore  COMMUNICATION.md  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  config.json  joyhousebot.spec  pyproject.toml
.github/workflows/: rpc-compat-gate.yml
bridge/: package-lock.json
bridge/src/: index.ts  server.ts
bridges/whatsapp/: package.json
docs/: CLI_REFERENCE.md  DESIGN_AND_ARCHITECTURE.md  ERROR_HANDLING.md  README.md
docs/en/: OPENCLAW_PLUGIN_HOST.md
docs/zh/: AGENT_AUTONOMOUS_DECISION.md  BROWSER_GUIDE.md  CHANNEL_PLUGIN_GUIDE.md  DNS_GUIDE.md  HOOK_SYSTEM_DESIGN.md  MEMORY_GUIDE.md  MEMORY_VS_OPENCLAW.md  NATIVE_PLUGIN_GUIDE.md  OPENCLAW_PLUGIN_HOST.md  PLUGIN_COMPARISON.md  X402_PAYMENT_PROTOCOL.md
examples/channel-plugins/: README.md
frontend/: .env.example  API_MATCH_REPORT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
joyhousebot/: __init__.py  __main__.py  skill_installer.py
joyhousebot/agent/: __init__.py  auth_profiles.py  context.py  decision_card.py  loop.py  memory.py  memory_compaction.py  memory_janitor.py  response_prefix.py  skills.py  subagent.py
joyhousebot/api/: __init__.py  server.py
joyhousebot/approvals/: __init__.py  exec_approval_forwarder.py
joyhousebot/browser/: __init__.py  server.py  snapshot.py  state.py
joyhousebot/bus/: __init__.py  queue.py
joyhousebot/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  messages_ack.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py  whatsapp_bridge_client.py
joyhousebot/cli/: __init__.py  commands.py
joyhousebot/cloud/: __init__.py  (+4 more)
plugin_host/: package-lock.json  package.json
scripts/: build-and-package.sh  build-ui.sh  check_plugin_boundaries.py  pre_release_check.sh  rpc_compat_smoke.py  sync-a2ui-from-openclaw.sh
tests/: conftest.py  test_agent_approve_command.py  test_agent_context_memory.py  test_agent_memory.py  test_agent_memory_compaction.py  test_agent_memory_janitor.py  test_agent_tools_browser.py  test_agent_tools_builtin.py  test_agent_tools_canvas.py  test_agent_tools_memory_get.py  test_agent_tools_shell.py  test_api_http_agent_methods.py  test_api_http_chat_methods.py  test_api_http_cron_rest_methods.py  test_api_http_error_helpers.py  test_api_http_identity_methods.py  test_api_http_message_methods.py  test_api_http_openai_methods.py  test_api_http_session_methods.py  test_api_http_task_methods.py  test_api_http_transcription_methods.py  test_api_library_app.py  test_api_rpc_agents_methods.py  test_api_rpc_browser_methods.py  test_api_rpc_chat_methods.py  test_api_rpc_config_methods.py  test_api_rpc_connect_methods.py  test_api_rpc_control_state.py  test_api_rpc_cron_methods.py  test_api_rpc_dispatch_pipeline.py  test_api_rpc_error_boundary.py  test_api_rpc_exec_approval_methods.py  test_api_rpc_health_status_methods.py  test_api_rpc_lanes_methods.py  test_api_rpc_misc_methods.py  test_api_rpc_node_runtime_methods.py  test_api_rpc_pairing_methods.py  test_api_rpc_pipeline_builder.py  test_api_rpc_pipeline_handlers.py  test_api_rpc_plugin_gateway_methods.py  (+65 more)
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
(+349 files in other folders)
